--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   background-image: url(images/background.png);
   background-size: cover;
   background-position: center;
+
 }
 
 .container {
@@ -43,7 +44,14 @@ nav {
   display: flex;
   align-content: center;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.956);
+  z-index: 9999;
 }
 
 .logo {
