--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ nav {
   left: 0;
   background-color: rgba(0, 0, 0, 0.956);
   z-index: 9999;
+
+
 }
 
 .logo {
@@ -108,7 +110,9 @@ nav ul .fas {
 
 .header-text h1 span {
   color: #ff004f;
+
 }
+
 
 /* Responsive image styling */
 .header-text .additional-image {
@@ -154,6 +158,7 @@ nav ul .fas {
   .header-text h1 {
     font-size: 36px;
   }
+  
 }
 
 @media (max-width: 480px) {
@@ -200,6 +205,7 @@ nav ul .fas {
   .header-text .additional-image {
     width: 70%;
   }
+  
 }
 
 /* Other existing styles */
@@ -281,7 +287,7 @@ nav ul .fas {
 }
 
 #services {
-  padding: 30px 0;
+  padding: 130px 0;
 }
 
 .services-list {
@@ -320,13 +326,17 @@ nav ul .fas {
   display: inline-block;
 }
 
+
+
+/*hover effect for the service cards*/
+
 .services-list div:hover {
   background: #ff004f;
   transform: translateY(-10px);
 }
 
 #portfolio {
-  padding: 50px 0;
+  padding: 90px 0;
 }
 
 .work-list {
@@ -348,6 +358,17 @@ nav ul .fas {
   display: block;
   transition: transform 0.5s;
 }
+
+
+
+
+
+/*hover effect of the height of the layer*/
+
+.work:hover .layer {
+  height: 100%;
+}
+
 
 .layer {
   width: 100%;
@@ -390,10 +411,10 @@ nav ul .fas {
   transform: scale(1.1); 
 }
 
-.work:hover .layer {
-  height: 100%;
-}
 
+
+
+/*hover effect of the height of the layer*/
 .btn {
   display: block;
   margin: 50px auto;
@@ -408,6 +429,9 @@ nav ul .fas {
 
 .btn:hover {
   background: #ff004f;
+}
+#contact {
+  padding: 130px 0;
 }
 
 .contact-left {
